MacViews: Fix text input for password textfields.

crrev.com/2033433006 modified insertText handlers on BridgedContentView to
correctly handle space key events and simplify menu dispatch. However this broke
text input for password textfields.

This CL fixes the issue by introducing a new private method insertTextInternal:
on BridgedContentView, which is used by both insertText: and
insertTextReplacementRange:. Furhter, another private method
activeMenuController: is added to retreive the currently active menu controller.
A textfield test is also added which fails on MacViews for the current master.

This CL is dependent on http://crrev.com/2095283002.

BUG=623036
TEST=Enable Macviews. Open an http auth dialog (Go to
httpwatch.com/httpgallery/authentication/ and click on Display Image button).
Move focus to password textfield and ensure text input works correctly.

Review-Url: https://codereview.chromium.org/2096363002
Cr-Commit-Position: refs/heads/master@{#403117}

Former-commit-id: 25492d28991f4cd464c8d8ab728e548ae735b8a2